<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/teams_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/spartak_logotype"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="@dimen/height_100"
                        android:layout_marginEnd="@dimen/margin_for_spartak_logo"
                        android:layout_marginRight="@dimen/margin_for_spartak_logo"
                        android:background="@mipmap/fk_spartak"
                        android:contentDescription="@string/image_of_spartak" />

                    <ImageView
                        android:id="@+id/lokomotiv_logotype"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="@dimen/height_100"
                        android:layout_marginLeft="@dimen/margin_for_lokomotiv_logo"
                        android:layout_marginStart="@dimen/margin_for_lokomotiv_logo"
                        android:background="@mipmap/fk_lokomotiv"
                        android:contentDescription="@string/image_of_lokomotiv" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_for_tview_score"
                    android:gravity="center"
                    android:text="@string/score_of_match"
                    android:textSize="@dimen/ts_20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_50"
                    android:layout_marginTop="@dimen/margin_10"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/spartak_score"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="@dimen/height_100"
                        android:background="@drawable/ground"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/txt_size" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="@dimen/width_second_dot"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/second_dot"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/txt_size" />

                    <TextView
                        android:id="@+id/loko_score"
                        android:layout_width="@dimen/width_100"
                        android:layout_height="@dimen/height_100"
                        android:background="@drawable/ground"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/txt_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Spartak"
                        android:layout_width="@dimen/width_for_button_team"
                        android:layout_height="@dimen/height_for_button_team"
                        android:gravity="center"
                        android:onClick="onClickAddSpartak"
                        android:padding="@dimen/padding_for_button_teams"
                        android:text="@string/spartak"
                        android:textSize="@dimen/ts_20"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/Loko"
                        android:layout_width="@dimen/width_for_button_team"
                        android:layout_height="@dimen/height_for_button_team"
                        android:gravity="center"
                        android:onClick="onClickAddLokomotiv"
                        android:padding="@dimen/padding_for_button_teams"
                        android:text="@string/lokomotiv"
                        android:textSize="@dimen/ts_20"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_for_button_team"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/mt_for_clear_button"
                    android:onClick="onClickButtonClear"
                    android:text="@string/clear_score" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>